Update package-win.bat
Updated MSI package build script